# opengl_gravity_sim

./: .gitignore  README.md  opengl_gravity.cabal  tripleBytePhysics.cabal
src/: Bindings.hs  Body.hs  Cube.hs  Display.hs  Main.hs  Planets.hs  Renderer.hs  Simulation.hs  SolarSystem.hs  System.hs  Util.hs
