name:                opengl-gravity
version:             0.1.0.0
license-file:        LICENSE
author:              Marcus Buffett
maintainer:          marcusbuffett@me.com
build-type:          Simple
cabal-version:       >=1.10

executable opengl-gravity
  main-is:             Main.hs
  other-modules:       Bindings,
                       Renderer,
                       Simulation,
                       Body,
                       System,
                       Util,
                       Planets,
                       SolarSystem
  build-depends:       base >=4.8 && <4.9, 
                       GLUT,
                       OpenGL,
                       AC-Vector,
                       time,
                       random
  hs-source-dirs:      src
  default-language:    Haskell2010
